# localandopen

./: LICENSE.TXT  README.md
.github/workflows/: nodejs.yml  rust.yml  rustbuilder.yml
api/: .gitignore  Dockerfile  Makefile  README.md  packages.txt
api/src/: main.go
api/src/app/: auth.go  errors.go
api/src/controllers/: authControllers.go  loggingController.go  offeringsControllers.go  vendorsControllers.go
api/src/models/: accounts.go  base.go  logging.go  offering.go  vendor.go
api/src/utils/: utils.go
localandopen/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
localandopen/public/: index.html
localandopen/src/: App.css  App.js  App.test.js  config.js  index.js  serviceWorker.js
localandopen/src/Components/: AboutUs.js  App.js  Dataprotection.js  Impressum.js  Main.js  Navigation.js  Register.js  Session.js  Shopview.js  VendorCard.js
rust/: Cargo.toml
rust/sql/: 000_init.sql  001_create_stores.sql  migrate.sh
rust/src/: main.rs
rust/src/lib/: config.rs
rust/src/templates/: _result.html  _search_form.html  index.html  newvendor.html  search_results.html
