[package]
name = "localandopen"
version = "0.1.0"
authors = ["Maximilian Warsewa <mwa@strukt.re>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv="0.15"
tokio={version="0.2", features=["full"]}
warp="0.2"
handlebars="3.0"
serde={version = "1.0", features=["derive"]}
serde_json="1.0"
